<resources>
    <string name="app_name">Who\'s Next</string>

    <string name="signed_in_key">signed_in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">Username</string>
    <string name="prompt_birthdate">Birth date</string>
    <string name="title_group_list">Groups</string>
    <string name="title_group_detail">Group Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="dashboard">Dashboard</string>
    <string name="groups">Groups</string>
    <string name="my_account">My account</string>
    <string name="login_prefs">login_state</string>
    <string name="new_group">New group…</string>
    <string name="cover_photo">cover photo</string>
    <string name="image_transition_name">image</string>
    <string name="group_name_transition_name">groupName</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up">Sign up</string>
    <string name="username_taken">Username already taken.</string>
    <string name="profile_pic_transition_name">profilePic</string>
    <string name="edit_profile">Edit my profile</string>
    <string name="image_intent_picker_title">Take a picture or pick one from your gallery</string>
    <string name="prompt_groupname">Group name</string>
    <string name="group_members">Group members</string>
    <string name="add_member">Add a member...</string>
    <string name="group_cover_picture">Group cover picture</string>
    <string name="edit_group">Edit a group</string>
    <string name="create_group">Create a group</string>
    <string name="group_name_empty_error">Group name must not be empty.</string>
    <string name="user_name_empty_error">Username must not be empty.</string>
    <string name="birthdate_error">Birthdate must be past.</string>
    <string name="group_users_saving_error">Error saving group users</string>
    <string name="group_admins_saving_error">Error saving group admins</string>
    <string name="group_saving_error">Error trying to save group</string>
</resources>