<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditGroupActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/edit_profile_pic_wrapper"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_height="@dimen/profile_pic_height">

            <ImageView
                android:id="@+id/edit_profile_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/protection_scrim_top"
                android:transitionName="@string/profile_pic_transition_name"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/edit_picture_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera_white_24dp"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/account_detail_container"
            android:paddingTop="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="48dp"
                android:layout_marginEnd="56dp"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_account_multiple_grey600_24dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_groupname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_groupname"
                        android:layout_alignParentBottom="true"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/group_members"
                    android:paddingTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/group_members"
                        app:layoutManager="LinearLayoutManager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.ProgressBar"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/add_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/picture"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_plus_grey600_24dp"
                        android:layout_margin="@dimen/text_margin"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:contentDescription="@string/group_cover_picture" />

                    <TextView
                        android:id="@+id/content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:textColor="#757575"
                        android:text="@string/add_member"
                        android:textAppearance="?attr/textAppearanceListItem" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_check_white_24dp"
        app:layout_anchor="@+id/account_detail_container"
        app:layout_anchorGravity="top|end" />

</android.support.design.widget.CoordinatorLayout>