<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    android:id="@+id/account_detail_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/pic_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_pic_height"
                android:background="@color/colorPrimaryDark">

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:transitionName="@string/profile_pic_transition_name"
                    android:foreground="@drawable/protection_scrim_bottom"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/username"
                    android:transitionName="username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera_white_24dp"
                    android:layout_margin="16dp"
                    android:textSize="32sp"
                    android:textColor="@android:color/white"
                    android:hint="@string/prompt_username"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>



            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="-28dp"
                android:src="@drawable/ic_pencil_white_24dp"
                android:layout_alignBottom="@id/pic_container"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@id/pic_container"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="48dp"
                    android:layout_marginEnd="56dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:src="@drawable/ic_calendar_grey600_24dp"/>

                    <TextView
                        android:id="@+id/birthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:hint="@string/prompt_birthdate"
                        />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
