<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mobilefactory.whosnext.EditAccountActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/edit_profile_pic_wrapper"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/edit_profile_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionName="@string/profile_pic_transition_name"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/edit_picture_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera_white_24dp"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/protection_scrim_top"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/account_detail_container"
            android:paddingTop="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="48dp"
                android:layout_marginEnd="56dp"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_account_grey600_24dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:layout_alignParentBottom="true"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="48dp"
                android:layout_marginEnd="56dp"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_calendar_grey600_24dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_birthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:focusable="false"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:hint="@string/prompt_birthdate"
                        android:layout_alignParentBottom="true"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_check_white_24dp"
        app:layout_anchor="@+id/account_detail_container"
        app:layout_anchorGravity="top|end" />

</android.support.design.widget.CoordinatorLayout>